add_subdirectory(Utils)
add_subdirectory(Instrumentation)
add_subdirectory(InstCombine)
add_subdirectory(Scalar)
add_subdirectory(IPO)
add_subdirectory(Vectorize)
add_subdirectory(Hello)
add_subdirectory(tool_critinst)
add_subdirectory(tool_file2fun)
add_subdirectory(tool_findlines)
add_subdirectory(tool_findnulls)
add_subdirectory(tool_rename)
add_subdirectory(tool_structanalyze)
